Hide uid data in moderation reports
fixes #207